@@ -1,5 +1,7 @@
 0.4.4
 * updated to reference latest metrics-raw.
+* updated to enable use of the KairosDB*LIsteners without the metricRegistry. (i.e. registry is nullable).
+* update references of serviceTeam to namespace
 0.0.2
 * added metrics version info to metrics status, under metricsraw.stats.data.count (2 new tags: kairDbListenerVersion, and metricsRawVersion)
 
